--- a/3.html
+++ b/3.html
@@ -19,16 +19,24 @@
      가운데 빵 사이에 딸기잼이 발라져있다. 상큼하고 맛있다. <br>
      오른쪽에 있는 음료는 딸기 시즌 메뉴인 스트로베리 소프트 밀크티인데 진짜 별로다.<br>
      소프트 밀크티는 정말 맛있는데 거기에 굳이 딸기를 얹었어야 했을까
-     라는 생각이 들 정도로 별로다.
+     라는 생각이 들 정도로 별로다. cj 대기업 사람들의 입맛 알다가도 모르겠다.
      <li> 스트로베리 초코 생크림 </li>
      <img src = "choco.jpg" width = "30%"><br>
      투썸 케이크 중에 가장 많이 팔리는 케이크로 초코 생크림 케이크 위에 딸기가
      잔뜩 올려져 있다. <br> 초코 생크림안에 크런치가 들어 있는데 초코를 좋아하는
-     사람이라면 안좋아할 수 없는 케이크.
+     사람이라면 안좋아할 수 없는 케이크. 하루종일 굶고 먹어봤는데 한판은 다 못먹고
+     한 두조각 남겼다. 넘 달아서 물릴만 하면 딸기 하나씩 집어먹고 반복하다 보니까
+     금방 없어졌다
      <li> 프렌치 허니 크레이프 </li>
      <img src = "honey.jpg" width = "30%"> <br>
-     화이트 시트 위에 레몬 크런치와 레몬크림치즈무스를 올리고 크레이프 사이에 <br>
-     허니 마스카포네 생크림을 채운 케이크로 상큼한 레몬 향을 좋아한다면 추천.
+     크레이프 사이에 레몬크림치즈무스를 올리고 어쩌고 돼있는데 걍 레몬맛 나는 달달한 케이크다. <br>
+     난 개인적으로 별로였는데 친구는 이마를 치면서 먹는다. 맛있다던데 진짜 좋은건지...
+     이마 브레이커 케이크
+     <li> 비마이스트로베리 </li>
+     <img src = "bemystr.jpg" width = "30%"> <br>
+     나온지 몇개월 되긴 했는데 우리는 개시를 늦게 해서 개시한지 한달? 좀 안된
+     딸기 무스 케이크. <br>같이 일하는 언니가 사줘서 먹어봤는데 그냥 딸기 케이크 맛인데
+     내 입에는 엄청 달지 않고 맛있다. 작아서 그런가 하튼 어디가서 사주고 욕은 안먹을 케이크
      </ol>
  </body>
 </html>
