--- a/1.html
+++ b/1.html
@@ -8,10 +8,11 @@
   <h1><a herf = "index.html">TWOSOMEPLACE</a></h1>
   <img src = "two.jpg" width = "50%">
     <ul>
-     <li>투썸 직접 먹어본 추천 메뉴</li>
+     <li>지윤이 알바일기</li>
       <ul>
        <li><a href= "2.html">음료</a></li>
        <li><a href= "3.html">케이크</a></li>
+       <li><a href= "4.html">투썸 사람들</a><li>
      </ul>
    </ul>
  </body>
