--- a/2.html
+++ b/2.html
@@ -9,22 +9,21 @@
     <ul>
      <li> 모카칩 프라페 </li>
      <img src = "mo.jpg" width ="30%"> <br>
-       모카칩 프라페는 초코칩과 우유, 커피 파우더와 얼음을 넣고 <br>
-       갈아 만든 음료인데 개인적으로 샷을 추가해서 먹으면 맛있다. <br>
+       모카칩 프라페는 초코칩과 초코소스가 들어간 프라페인데<br>
+       샷 추가해서 먹으면 맛있다. <br>
        사진은 평일 오전 언니랑 샷 추가해서 만든 건데 언니가 이상하게 <br>
-       초코소스를 올려서 모양이 좀 그렇지만 정말 맛있다.
+       초코소스를 올려서 모양이 좀 그렇지만 맛있다.
      <li> 샹그리아 에이드 </li>
       <img src = "ade.jpg" width ="30%"> <br>
        샹그리아 에이드는 뱅쇼 시럽을 넣은 에이드로 위에 생자몽과 레몬이 올라간다.<br>
        투썸은 에이드에 사이다가 아닌 탄산수를 넣어 다른 카페보다 설탕이 덜 <br>
        들어가는 편이다. 뱅쇼를 좋아한다면 선호할만한 음료다.
        <li> 레몬 셔벗 에이드 </li>
-        <img src = "ade.jpg" width ="30%"> <br>
+        <img src = "lemon.jpg" width ="30%"> <br>
          라임민트시럽에 샴페인시럽 조금 들어가고 위에 레몬 셔벗 아이스크림이랑
          생레몬이 올라간다<br>
           레몬 셔벗 아이스크림이 레몬 껍질같은게 씹히고 진짜 상큼하니 맛있다 <br>
-          그냥 아이스크림이 아니라 셔벗이라 서벅 ..ㅎㅎ; 사각? 뭐라고 해야될지 모르겠는데
-          하튼 그런거라 모양잡아서 예쁘게 올리려면 신경써야한다. <br>
+          그냥 아이스크림이 아니라 셔벗이라 모양잡아서 예쁘게 올리려면 신경써야한다. <br>
           모양 예쁘게 나갈때 희열 느낀다. 하지만 귀찮으니까 다들 아메리카노만 먹었으면..
      <li> 제주말차 프라페 </li>
       <img src = "malcha.jpg" width="30%"><br>
@@ -33,24 +32,23 @@
        원래는 휘핑크림을 올려주지 않지만 추가해서 먹으면 맛있다. 하지만
        다들 이 음료를 몰랐으면 좋겠다. 만들기 제일 귀찮으니까 ...
        <li> 연유라떼 </li>
-       <img src = "latte.jpg" width ="15%"> <br>
-        <img src = "latte2.jpg" width ="15%"> <br>
+       <img src = "latte.jpg" width ="30%"> <br>
+        <img src = "latte2.jpg" width ="30%"> <br>
        4월 중순쯤 나온 신메뉴 연유라떼는 원래 라떼에 연유만 부은것인데
        위에 솔티드 캬라멜이 뿌려진다.<br> 그냥 달달한 커피 먹고 싶을 때 가끔 먹는데
        연유가 꽤 들어간 거 치고는 안 단편이다. 샷추가해서 먹으면 맛있다.<br>
        그냥 공차마냥 흑설탕 밀크티 이런거나 내주지 왜 신메뉴 이런거만 내놓는지
-       이해불가...
+       대기업 사람들 입맛 취향 존중 불가
        <li> 커피 쉐이크</li>
         <img src = "shake.jpg" width ="30%"> <br>
-       투썸의 쉐이크는 전부 아이스크림을 갈아서 만든다. 아이스크림 갈 때 아이스크림 통통 튀어서
-       블랜더기 붙잡고 있어야 하는게 제일 귀찮다. 다들 아메리카노만 먹었으면 좋겠다.<br>
+       투썸의 쉐이크는 전부 아이스크림을 갈아서 만든다.<br>
+       아이스크림 갈 때 아이스크림 통통 튀어서 블랜더기 붙잡고 있어야 하는게 제일 귀찮다.<br>
+      다들 아메리카노만 먹었으면 좋겠다.<br>
        바닐라 초코 커피 세 종류가 있는데 커피 쉐이크는 진짜 샷을 내려서 샷이랑 아이스크림을
        같이 갈아 만든다.<br> 그리고 원래 레귤러 사이즈만 가능한데 내가 많이 먹고 싶어서
-       라지 사이즈에 먹었다. 캬라멜 소스도 원래 안뿌리는데 같이 일하는 언니가 뿌려 먹어
-       보자고 해서 먹어봤다.<br> 레시피 메뉴얼이 왜 있는지 한번 더 깨닫는 하루가 되었다.
+       라지 사이즈에 먹었다.<br> 캬라멜 소스도 원래 안뿌리는데 같이 일하는 언니가 뿌려 먹어
+       보자고 해서 먹어봤다.<br> 맛 따로 놀아서 진짜 별로였다.
        <br>
-       남들과 다른 방향으로 가는 것보다 남들이 닦아 놓은 길을 걸어가는 것이 편하다. 굳이 개척
-       하려고 하지말자.
      </ul>
  </body>
 </html>
