--- a/1.html
+++ b/1.html
@@ -3,16 +3,19 @@
  <head>
   <title>WEB1 - html</title>
   <meta charset="utf-8">
+ <link rel="stylesheet" href="style.css">
  </head>
  <body>
   <h1><a herf = "index.html">TWOSOMEPLACE</a></h1>
-  <img src = "two.jpg" width = "50%">
+  <img src = "two.jpg" width = "70%">
+  <div id="grid">
   <ul>
-     <li>지윤이 알바일기</li>
-      <ul>
-       <li><a href= "2.html">음료</a></li>
-       <li><a href= "3.html">케이크</a></li>
-     </ul>
+     <h2><img src = "menu1.png" width = "5%">내가 먹어본 투썸 메뉴들
+       <img src = "menu2.png" width = "5%"></h2>
+      <div ol id = "list">
+       <li><a href= "2.html">beverage</a></li>
+       <li><a href= "3.html">cake</a></li>
+     </ol> </div>
    </ul>
    <p>
      <div id="disqus_thread"></div>
